[INTGW-940] - Upgrade WSO2 library versions to support IS 5.6

--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -30,15 +30,15 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
 		</dependency>
 		<dependency>
@@ -96,22 +96,22 @@
 			<artifactId>commons-logging</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.user.ws</groupId>
 			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.endpoint.util</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
-			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.wso2.carbon.identity.user.ws</groupId>-->
+<!--			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>-->
+<!--			<type>jar</type>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>sp-config-util</artifactId>
