--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -90,7 +90,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
             <scope>provided</scope>
 		</dependency>
@@ -126,7 +126,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
 			<scope>provided</scope>
 		</dependency>
