--- a/components/token-introspection/pom.xml
+++ b/components/token-introspection/pom.xml
@@ -137,7 +137,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
             <scope>provided</scope>
             <!--<scope>system</scope>-->
