[INTGW-940] - Update dependency groupid

--- a/components/token-introspection/pom.xml
+++ b/components/token-introspection/pom.xml
@@ -131,9 +131,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
-            <version>4.2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
